@@ -163,12 +163,12 @@ EU_ECB_category = {
 					add = -80
 					all_of_scopes = {
 						array = global.EU_member
-							if = {
-								limit = {
-									has_idea = the_euro
-								}
-								check_variable = { THIS.interest_rate < 4.0 }
+						if = {
+							limit = {
+								has_idea = the_euro
 							}
+							check_variable = { THIS.interest_rate < 4.0 }
+						}
 					}
 				}
 				modifier = {
