@@ -931,49 +931,39 @@ ideas = {
 			}
 		}
 
+		investors_bonus = {
+			picture = foreign_capital
+			modifier = {
+				interest_rate_multiplier_modifier = -1.5
+				receiving_investment_duration_modifier = -0.25
+				receiving_investment_cost_modifier = -0.25
+				consumer_goods_factor = -0.015
+			}
+		}
+
 		baath_movement = {
-
-
 			picture = nationalism
-
-
-
 			modifier = {
 				nationalist_drift = 0.1
 			}
 		}
 
 		shia_movement = {
-
-
 			picture = syrian_shiite
-
-
-
 			modifier = {
 				communism_drift = 0.1
 			}
 		}
 
 		sunni_movement = {
-
-
 			picture = islamic_world
-
-
-
 			modifier = {
 				neutrality_drift = 0.1
 			}
 		}
 
 		pro_western_movement = {
-
-
 			picture = democracy
-
-
-
 			modifier = {
 				democratic_drift = 0.1
 			}
