@@ -563,11 +563,11 @@ focus_tree = {
 		completion_reward = {
 			if = {
 				limit = { original_tag = SAU }
-				set_temp_variable = { treasury_change = -10 }
+				set_temp_variable = { treasury_change = -18.75 }
 				modify_treasury_effect = yes
 			}
 			else = {
-				set_temp_variable = { treasury_change = -5 }
+				set_temp_variable = { treasury_change = -9.5 }
 				modify_treasury_effect = yes
 			}
 			if = {
@@ -575,7 +575,7 @@ focus_tree = {
 				random_owned_state = {
 					add_resource = {
 						type = oil
-						amount = 5
+						amount = 10
 					}
 				}
 			}
@@ -584,7 +584,12 @@ focus_tree = {
 					add_resource = {
 						type = oil
 						amount = 10
-						#state = 174
+					}
+				}
+				random_owned_state = {
+					add_resource = {
+						type = oil
+						amount = 10
 					}
 				}
 			}
@@ -824,8 +829,6 @@ focus_tree = {
 			change_small_medium_business_owners_opinion = yes
 			set_temp_variable = { temp_opinion = -5 }
 			change_saudi_royal_family_opinion = yes
-			change_the_wahabi_ulema_opinion = yes
-			change_the_ulema_opinion = yes
 			change_landowners_opinion = yes
 			if = {
 				limit = {
@@ -1002,16 +1005,23 @@ focus_tree = {
 		completion_reward = {
 			if = {
 				limit = { original_tag = SAU }
-				set_temp_variable = { treasury_change = -4.5 }
+				set_temp_variable = { treasury_change = -5 }
 				modify_treasury_effect = yes
 			}
 			else = {
-				set_temp_variable = { treasury_change = -2.25 }
+				set_temp_variable = { treasury_change = -2.5 }
 				modify_treasury_effect = yes
 			}
 			if = {
 				limit = { original_tag = SAU }
 				random_owned_state = {
+					limit = {
+						free_building_slots = {
+							building = air_base
+							size > 1
+							include_locked = yes
+						}
+					}
 					add_building_construction = {
 						type = air_base
 						level = 2
@@ -1021,6 +1031,13 @@ focus_tree = {
 			}
 			else = {
 				random_owned_state = {
+					limit = {
+						free_building_slots = {
+							building = air_base
+							size > 0
+							include_locked = yes
+						}
+					}
 					add_building_construction = {
 						type = air_base
 						level = 1
@@ -1028,6 +1045,7 @@ focus_tree = {
 					}
 				}
 			}
+
 			log = "[GetDateText]: [This.GetName]: focus GCC_support_the_aviation_sector executed"
 		}
 
@@ -1095,7 +1113,8 @@ focus_tree = {
 		completion_reward = {
 			if = {
 				limit = { original_tag = SAU }
-				four_random_industrial_complex = yes
+				three_random_industrial_complex = yes
+				one_office_construction = yes
 			}
 			else = { two_random_industrial_complex = yes }
 			log = "[GetDateText]: [This.GetName]: focus GCC_support_manufacturing executed"
@@ -1347,7 +1366,6 @@ focus_tree = {
 				remove_idea = small_medium_business_owners
 				add_idea = industrial_conglomerates
 			}
-			add_stability = 0.025
 			log = "[GetDateText]: [This.GetName]: focus GCC_empower_industrial_conglomerates executed"
 		}
 
@@ -1364,7 +1382,7 @@ focus_tree = {
 		y = 7
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 9.4
 
 		prerequisite = { focus = GCC_end_the_rentier_state }
 		prerequisite = { focus = GCC_end_oil_dependency }
@@ -1386,6 +1404,7 @@ focus_tree = {
 			else = { two_random_infrastructure = yes }
 			set_temp_variable = { temp_opinion = 10 }
 			change_small_medium_business_owners_opinion = yes
+			increase_economic_growth = yes
 			add_stability = 0.025
 			log = "[GetDateText]: [This.GetName]: focus GCC_commit_to_domestic_merchants executed"
 		}
@@ -1403,7 +1422,7 @@ focus_tree = {
 		y = 7
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 12.15
 
 		prerequisite = { focus = GCC_end_the_rentier_state }
 		prerequisite = { focus = GCC_end_oil_dependency }
@@ -1433,8 +1452,11 @@ focus_tree = {
 				remove_idea = small_medium_business_owners
 				add_idea = international_bankers
 			}
-			two_office_construction = yes
-			add_stability = 0.05
+			three_office_construction = yes
+			add_timed_idea = {
+				idea = investors_bonus
+				days = 720
+			}
 			log = "[GetDateText]: [This.GetName]: focus GCC_cater_to_investors executed"
 		}
 
@@ -1575,34 +1597,57 @@ focus_tree = {
 					}
 				}
 				capital_scope = {
-					add_manpower = 50000
+					add_manpower = 20000
 				}
 			}
 			if = {
 				limit = {
-					OR = {
-						original_tag = KUW
-						original_tag = OMA
-					}
+					original_tag = KUW
 				}
 				capital_scope = {
-					add_manpower = 100000
+					add_manpower = 40000
+				}
+			}
+			if = {
+				limit = {
+					original_tag = OMA
+				}
+				182 = {
+					add_manpower = 35000
+				}
+				183 = {
+					add_manpower = 10000
+				}
+				182 = {
+					add_manpower = 5000
 				}
 			}
 			if = {
 				limit = {
 					original_tag = UAE
 				}
-				capital_scope = {
-					add_manpower = 300000
+				180 = {
+					add_manpower = 40000
+				}
+				179 = {
+					add_manpower = 45000
 				}
 			}
 			if = {
 				limit = {
 					original_tag = SAU
 				}
-				capital_scope = {
-					add_manpower = 500000
+				174 = {
+					add_manpower = 35000
+				}
+				176 = {
+					add_manpower = 175000
+				}
+				177 = {
+					add_manpower = 50000
+				}
+				178 = {
+					add_manpower = 15000
 				}
 			}
 			log = "[GetDateText]: [This.GetName]: focus GCC_amend_the_kafala_system executed"
@@ -1798,34 +1843,57 @@ focus_tree = {
 					}
 				}
 				capital_scope = {
-					add_manpower = 100000
+					add_manpower = 40000
 				}
 			}
 			if = {
 				limit = {
-					OR = {
-						original_tag = KUW
-						original_tag = OMA
-					}
+					original_tag = KUW
 				}
 				capital_scope = {
-					add_manpower = 200000
+					add_manpower = 70000
+				}
+			}
+			if = {
+				limit = {
+					original_tag = OMA
+				}
+				182 = {
+					add_manpower = 50000
+				}
+				183 = {
+					add_manpower = 20000
+				}
+				182 = {
+					add_manpower = 10000
 				}
 			}
 			if = {
 				limit = {
 					original_tag = UAE
 				}
-				capital_scope = {
-					add_manpower = 350000
+				180 = {
+					add_manpower = 60000
+				}
+				179 = {
+					add_manpower = 75000
 				}
 			}
 			if = {
 				limit = {
 					original_tag = SAU
 				}
-				capital_scope = {
-					add_manpower = 500000
+				174 = {
+					add_manpower = 35000
+				}
+				176 = {
+					add_manpower = 275000
+				}
+				177 = {
+					add_manpower = 50000
+				}
+				178 = {
+					add_manpower = 15000
 				}
 			}
 			if = {
@@ -2041,7 +2109,7 @@ focus_tree = {
 		y = 5
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 7.9
 
 		prerequisite = { focus = GCC_impose_quotas }
 		mutually_exclusive = { focus = GCC_mass_deportation }
@@ -2052,8 +2120,8 @@ focus_tree = {
 		}
 
 		completion_reward = {
-			add_political_power = 50
-			add_stability = -0.02
+			add_political_power = 100
+			add_stability = -0.05
 			log = "[GetDateText]: [This.GetName]: focus GCC_maintain_exploitation executed"
 		}
 
@@ -2081,11 +2149,11 @@ focus_tree = {
 
 		completion_reward = {
 			increase_economic_growth = yes
-			set_temp_variable = { temp_opinion = 5 }
+			set_temp_variable = { temp_opinion = 10 }
 			change_small_medium_business_owners_opinion = yes
-			set_temp_variable = { temp_opinion = 5 }
+			set_temp_variable = { temp_opinion = 10 }
 			change_industrial_conglomerates_opinion = yes
-			set_temp_variable = { temp_opinion = 5 }
+			set_temp_variable = { temp_opinion = 10 }
 			change_fossil_fuel_industry_opinion = yes
 			log = "[GetDateText]: [This.GetName]: focus GCC_accelerated_growth executed"
 		}
@@ -2217,7 +2285,7 @@ focus_tree = {
 		y = 1
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 6.45
 
 		prerequisite = { focus = GCC_socio_economic_affairs }
 		mutually_exclusive = { focus = GCC_weaken_the_mutaween }
@@ -2269,7 +2337,7 @@ focus_tree = {
 		y = 1
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 6.45
 
 		prerequisite = { focus = GCC_socio_economic_affairs }
 		mutually_exclusive = { focus = GCC_empower_the_mutaween }
@@ -2335,7 +2403,7 @@ focus_tree = {
 		y = 2
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 2.9
 
 		prerequisite = { focus = GCC_empower_the_mutaween focus = GCC_weaken_the_mutaween }
 
@@ -2363,7 +2431,7 @@ focus_tree = {
 		y = 3
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = GCC_womens_rights }
 
@@ -2391,7 +2459,7 @@ focus_tree = {
 		y = 3
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = GCC_womens_rights }
 
@@ -2418,7 +2486,7 @@ focus_tree = {
 		y = 4
 		relative_position_id = GCC_socio_economic_affairs
 
-		cost = 10
+		cost = 8.58
 
 		prerequisite = { focus = GCC_women_in_the_economy }
 		prerequisite = { focus = GCC_women_in_politics }
@@ -12070,7 +12138,7 @@ focus_tree = {
 		x = 20
 		y = 9
 
-		cost = 10
+		cost = 2.9
 
 		search_filters = {FOCUS_FILTER_POLITICAL}
 
