@@ -34,7 +34,7 @@
 			}
 		}
 
-		cost = 10
+		cost = 5
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -62,7 +62,7 @@
 		}
 
 		completion_reward = {
-			add_political_power = 25
+			add_political_power = 75
 			set_global_flag = GCC_the_gcc_completed
 			log = "[GetDateText]: [This.GetName]: focus GCC_the_gcc executed"
 		}
@@ -80,7 +80,7 @@
 		y = 1
 		relative_position_id = GCC_the_gcc
 
-		cost = 10
+		cost = 7.9
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -186,6 +186,8 @@
 						modifier = large_commercial_relations
 					}
 				}
+				set_temp_variable = { treasury_change = 5 }
+				modify_treasury_effect = yes
 			}
 			set_global_flag = GCC_economic_union_completed
 			log = "[GetDateText]: [This.GetName]: focus GCC_economic_union executed"
@@ -334,7 +336,7 @@
 		y = 3
 		relative_position_id = GCC_the_gcc
 
-		cost = 20
+		cost = 14.35
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -402,7 +404,7 @@
 		y = 2
 		relative_position_id = GCC_the_gcc
 
-		cost = 15
+		cost = 10
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -555,7 +557,7 @@
 		y = 3
 		relative_position_id = GCC_the_gcc
 
-		cost = 20
+		cost = 14.35
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -728,7 +730,7 @@
 		y = 1
 		relative_position_id = GCC_the_gcc
 
-		cost = 10
+		cost = 7.9
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -758,9 +760,10 @@
 			set_global_flag = GCC_military_union_completed
 			every_country = {
 				limit = { has_idea = idea_gcc_member_state }
-				army_experience = 10
-				navy_experience = 10
-				air_experience = 10
+				army_experience = 15
+				navy_experience = 15
+				air_experience = 15
+				add_war_support = 0.025
 			}
 			log = "[GetDateText]: [This.GetName]: focus GCC_military_union executed"
 		}
@@ -891,7 +894,7 @@
 		y = 3
 		relative_position_id = GCC_the_gcc
 
-		cost = 15
+		cost = 10
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -986,7 +989,7 @@
 		y = 3
 		relative_position_id = GCC_the_gcc
 
-		cost = 15
+		cost = 10
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -1117,7 +1120,7 @@
 		y = 4
 		relative_position_id = GCC_the_gcc
 
-		cost = 20
+		cost = 14.35
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -1231,7 +1234,7 @@
 		y = 1
 		relative_position_id = GCC_the_gcc
 
-		cost = 10
+		cost = 7.9
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -1263,7 +1266,7 @@
 			set_global_flag = GCC_political_union_completed
 			every_country = {
 				limit = { has_idea = idea_gcc_member_state }
-				add_political_power = 50
+				add_political_power = 75
 			}
 			log = "[GetDateText]: [This.GetName]: focus GCC_political_union executed"
 		}
@@ -1281,7 +1284,7 @@
 		y = 2
 		relative_position_id = GCC_the_gcc
 
-		cost = 10
+		cost = 8.58
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -1315,7 +1318,7 @@
 
 		completion_reward = {
 			set_global_flag = GCC_solidify_pro_american_alignment_completed
-			USA = { country_event = { days = 1 id = gcc.11 }}
+			USA = { country_event = { days = 1 id = gcc.11 } }
 			set_temp_variable = { rad_change = 10 }
 			modify_radicalization_effect = yes
 			set_temp_variable = { temp_opinion = 5 }
@@ -1340,7 +1343,7 @@
 		y = 2
 		relative_position_id = GCC_the_gcc
 
-		cost = 10
+		cost = 14.35
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -1399,6 +1402,8 @@
 				change_domestic_influence_percentage = yes
 			}
 			custom_effect_tooltip = GCC_increase_autonomy_tt
+			set_temp_variable = { rad_change = -5 }
+			modify_radicalization_effect = yes
 			log = "[GetDateText]: [This.GetName]: focus GCC_increase_autonomy executed"
 		}
 
@@ -1480,7 +1485,7 @@
 		y = 4
 		relative_position_id = GCC_the_gcc
 
-		cost = 15
+		cost = 14.35
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -1646,7 +1651,7 @@
 		y = 4
 		relative_position_id = GCC_the_gcc
 
-		cost = 15
+		cost = 8.58
 
 		cancel_if_invalid = yes
 		available_if_capitulated = no
@@ -1679,11 +1684,6 @@
 						NOT = { tag = ROOT }
 						NOT = { check_variable = { influence_array^0 = ROOT } }
 					}
-					# any_country = {
-					# 	has_idea = idea_gcc_member_state
-					# 	NOT = { tag = ROOT }
-					# 	NOT = { check_variable = { influence_array^0 = ROOT } }
-					# }
 				}
 			}
 		}
@@ -1732,8 +1732,8 @@
 				has_country_flag = gcc_dominant_member
 			}
 			custom_trigger_tooltip = {
-				tooltip = gcc_unity_100_tt
-				check_variable = { global.gcc_unity = 100 }
+				tooltip = gcc_unity_greater_95_tt
+				check_variable = { global.gcc_unity > 95 }
 			}
 			has_completed_focus = GCC_monetary_union
 		}
