@@ -76,57 +76,57 @@ defined_text = {
 	name = gcc_dominant_member
 
 	text = {
-		trigger = { SAU = { has_country_flag = gcc_dominant_member }}
+		trigger = { SAU = { has_country_flag = gcc_dominant_member } }
 		localization_key = SAU_gcc
 	}
 
 	text = {
-		trigger = { BHR = { has_country_flag = gcc_dominant_member }}
+		trigger = { BHR = { has_country_flag = gcc_dominant_member } }
 		localization_key = BHR_gcc
 	}
 
 	text = {
-		trigger = { KUW = { has_country_flag = gcc_dominant_member }}
+		trigger = { KUW = { has_country_flag = gcc_dominant_member } }
 		localization_key = KUW_gcc
 	}
 
 	text = {
-		trigger = { OMA = { has_country_flag = gcc_dominant_member }}
+		trigger = { OMA = { has_country_flag = gcc_dominant_member } }
 		localization_key = OMA_gcc
 	}
 
 	text = {
-		trigger = { QAT = { has_country_flag = gcc_dominant_member }}
+		trigger = { QAT = { has_country_flag = gcc_dominant_member } }
 		localization_key = QAT_gcc
 	}
 
 	text = {
-		trigger = { UAE = { has_country_flag = gcc_dominant_member }}
+		trigger = { UAE = { has_country_flag = gcc_dominant_member } }
 		localization_key = UAE_gcc
 	}
 
 	text = {
-		trigger = { EGY = { has_country_flag = gcc_dominant_member }}
+		trigger = { EGY = { has_country_flag = gcc_dominant_member } }
 		localization_key = EGY_gcc
 	}
 
 	text = {
-		trigger = { IRQ = { has_country_flag = gcc_dominant_member }}
+		trigger = { IRQ = { has_country_flag = gcc_dominant_member } }
 		localization_key = IRQ_gcc
 	}
 
 	text = {
-		trigger = { JOR = { has_country_flag = gcc_dominant_member }}
+		trigger = { JOR = { has_country_flag = gcc_dominant_member } }
 		localization_key = JOR_gcc
 	}
 
 	text = {
-		trigger = { MOR = { has_country_flag = gcc_dominant_member }}
+		trigger = { MOR = { has_country_flag = gcc_dominant_member } }
 		localization_key = MOR_gcc
 	}
 
 	text = {
-		trigger = { YEM = { has_country_flag = gcc_dominant_member }}
+		trigger = { YEM = { has_country_flag = gcc_dominant_member } }
 		localization_key = YEM_gcc
 	}
 }
