@@ -5,6 +5,8 @@
  construction_boom: "Construction Boom"
  oil_dependency: "Oil Dependency"
  oil_dependency_desc: "This country's economy is heavily reliant on the export of oil and other fossil fuels. While this dependence is lucrative in the short term, it is widely known that this over-reliance is unsustainable."
+ investors_bonus: "Regional financial hub"
+ investors_bonus_desc: "The development of our country as a regional financial hub has led to the stimulation of our economy and the creation of attractive conditions for investments."
  baath_movement: "Government-Backed Baath Movement"
  shia_movement: "Government-Backed Shia Islamist Movement"
  sunni_movement: "Government-Backed Sunni Islamist Movement"
@@ -195,7 +197,7 @@
  gcc_unity_greater_75_tt: "§YGCC Unity§! is higher than §Y75%§!"
  gcc_unity_greater_80_tt: "§YGCC Unity§! is higher than §Y80%§!"
  gcc_unity_greater_90_tt: "§YGCC Unity§! is higher than §Y90%§!"
- gcc_unity_100_tt: "§YGCC Unity§! is §Y100%§!"
+ gcc_unity_greater_95_tt: "§YGCC Unity§! is higher than §Y95%§!"
  gcc_no_veto_tt: "No member state has recently vetoed this or any other one of our proposals"
  GCC_expel: "Move to Expel [FROM.GetNameDef] from the GCC"
  GCC_expel_desc: "The new government that has taken control in [FROM.GetNameDef] poses a threat to the GCC and cannot be allowed to remain a part of this organization."
@@ -348,7 +350,7 @@
  has_repressive_government_tt: "Has §YRepressive§! or §YTotalitarian§! Government\n"
  has_not_repressive_government_tt: "Has §YReformist§! or §YLiberal§! Government\n"
  remove_demographics_idea_tt: "Remove §Y[ROOT.GetAdjective] Demographics§!\n"
- block_immigration_decisions_tt: "You will no longer be able to do the §YEncourage Shia/Sunni Immigration\n"
+ block_immigration_decisions_tt: "You will no longer be able to do the §YEncourage Shia/Sunni Immigration§!\n"
  unlock_double_immigration_tt: "Now you will be able to make a decision on the §YEncourage Shia/Sunni Immigration§! §Gtogether§! and decisions will be more efficient.\n"
 
  #Terrorism
