@@ -331,6 +331,7 @@
  mutual_trade_agreement: "Mutual Trade Agreement"
  mutual_trade_opinion: "Trade Agreement"
  broke_trade_agreement: "Broke Trade Agreement"
+ insult: "Insulted our leader"
 
  #Russian Opinions
  SOV_introduced_sanctions_dialogue: "Opened Sanctions Dialogue"
