@@ -54,6 +54,7 @@ Bugfixes:
  - Fixed a bunch of non-MTG errors in the OOBs
  - Fixed the 2017 SOV NSB file
  - Fixed duplicate triggers about SCO ideas for Officer International Training law
+ - Fixed missing localisation for insult opinion modifier
 
 Content:
  - Increased cost to drill oil for China
